[package]
name = "lit"
description = "LOOP Just In Time Interpreter"
version = "0.1.0"
authors = ["bmahmoud <bmahmoud@mpi-cbg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
num-bigint = "0.4.0"