[package]
name = "lit"
description = "LOOP Just In Time Interpreter"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"

[dependencies]
# PEG-Grammar Definitions
pest = "2.1.3"
pest_derive = "2.1.0"
pest_consume = "1.0.6"

# BigUInt Support
num-bigint = { version = "0.4.0", features = ['serde'] }
num-traits = "0.2.14"

# Configuration Flag Support
bitflags = "1.2.1"

# Utility
serde = { version = "1.0.125", features = ["derive"] }
derive-new = "0.5.9"
indoc = "1.0.3"
either = { version = "1.6.1", features = ["serde"] }
newtype_derive = "0.1.6"
itertools = "0.10.0"
sum_type = "0.2.0"
strum = "0.20"
strum_macros = "0.20"

# CLI
clap = { version = "2.33.3", optional = true }
structopt = { version = "0.3.21", optional = true }
schemars = { version = "0.8.3", features = ["impl_json_schema", "derive", "either"], optional = true }
serde_json = { version = "1.0.64", optional = true }

# WASM-Support
wasm-bindgen = { version = "0.2.73", features = ['serde-serialize'] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-typescript-definition = "0.1.4"
js-sys = "0.3.50"
wee_alloc = { version = "0.4.5", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true

[features]
default = ["console_error_panic_hook"]
cli = ["clap", "structopt", "schemars", "serde_json"]