[package]
name = "lexer"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
regex = "1.5.4"
lazy_static = "1.4.0"
bitflags = "1.2.1"
variants = { path = "../variants" }
text-size = "1.1.0"
combine = "4.5.2"
either = "1.6.1"