[package]
name = "parser"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
lexer = { path = "../lexer" }
hir = { path = '../ast/hir' }
variants = { path = "../variants" }
ctrl = {path = "../ast/ctrl"}
expr = { path = "../ast/expr" }
paste = "1.0.5"