[package]
name = "parser"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.5.2"
lexer = { path = "../lexer" }
hir = { path = '../ast/hir' }
mcr = { path = '../ast/mcr' }
num-traits = "0.2.14"
variants = { path = "../variants" }
ctrl = { path = "../ast/ctrl" }
expr = { path = "../ast/expr" }
fnc = { path = "../ast/fnc" }
paste = "1.0.5"
textwrap = "0.14.2"
indoc = "1.0.3"