[package]
name = "variants"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.0" }
num-traits = "0.2.14"

newtype_derive = "0.1.6"
text-size = "1.1.0"

either = "1.6.1"
# schema
schemars = { version = "0.8.3", features = ["impl_json_schema", "derive", "either"], optional = true }
serde = { version = "1.0.125", features = ["derive"], optional = true }

[features]
schema = ["schemars", 'num-bigint/serde', "serde"]