[package]
name = "ctrl"
version = "0.1.0"
authors = ["Bilal Mahmoud <bilalmahmoud@posteo.de>"]
edition = "2018"
description = "Holds the different control structures from LIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", optional = true }
schemars = { version = "0.8.3", optional = true }
variants = { path = "../../variants" }

[features]
schema = ["serde", "schemars"]
