[package]
name = "ctrl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
variants = { path = "../../variants" }
serde = { version = "1.0.126", optional = true }
schemars = { version = "0.8.3", optional = true }

[features]
schema = ["serde1", "schemars", "variants/schema"]
serde1 = ["serde", "variants/serde"]
