[package]
name = "mcr"
version = "0.1.0"
authors = ["bmahmoud <bmahmoud@mpi-cbg.de>"]
edition = "2018"
description = "mcr stands for macro - provides LIT macro capabilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../../lexer" }